<resources>
    <string name="app_name">demoLoginDesign</string>
    <string name="login">Login</string>
    <string name="facebook_app_id">627366574345697</string>
    <string name="fb_login_protocol_scheme">fb627366574345697</string>
    <string name="login_successful">Login successful</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="date_of_bird">Date of bird</string>
    <string name="gender">Gender</string>
    <string name="function">Function</string>
    <string name="logout">Logout</string>

</resources>
